# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
migrations/: 20201113034151_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
