[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Wei Liu <sunnywhy@gmail.com>"]
edition = "2018"

[lib]
# we could use any path here, but we are following the community convenetion
# we could specify name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
[[bin]]
path = "src/main.rs"
name = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.2.0"
serde = { version = "1.0.117", features = ["derive"] }
tokio = "0.2.22"
sqlx = { version = "0.4.0", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.10.1"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.19"

[dev-dependencies]
reqwest = { version = "0.10.8", features = ["json"] }
